fixed css ( height and overflow ) for horizontal transitions

--- a/dzieuo.css
+++ b/dzieuo.css
@@ -1,24 +1,25 @@
-﻿body {
+﻿html, body {
 	padding: 0;
 	margin: 0;
+	height: 100%;
 }
 
 #dzieuo {
 	position: relative;
-	height: 400px;
-	width: 98%;
+	overflow-x: hidden;
+	overflow-y: visible;
+	height: 100%;
 }
 
 .dz-column {
-	border: 1px solid red;
 	width: 100%;
+	background: pink;
 	position: absolute;
 	top: 0;
 	left: 0;
 }
 
 .dz-row {
-	border: 1px solid orange;
 }
 
 #dzViewPort {
